--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,7 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 4rem;
+  padding: 4rem 4rem 0 4rem;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
@@ -27,9 +27,12 @@ body {
   color: #777; }
   @media (max-width: 56.25em) {
     body {
-      padding: 0; } }
+      padding: 3rem 3rem 0 3rem; } }
+  @media (max-width: 37.5em) {
+    body {
+      padding: 2rem 2rem 0 2rem; } }
 
-p::selection {
+*::selection {
   background: #999;
   color: #f7f7f7; }
 
@@ -40,8 +43,40 @@ a:active {
   color: #398ad7;
   text-decoration: none; }
 
+.btn, .btn:link, .btn:visited {
+  width: 17rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  padding: 0.75rem 4rem;
+  border-radius: .2rem;
+  display: inline-block;
+  transition: all .2s;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active, .btn:focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.btn--white {
+  background-color: #f7f7f7;
+  color: #777; }
+  .btn--white::after {
+    background-color: #f7f7f7; }
+
 .header__box {
-  background-color: #398ad7;
+  background-image: linear-gradient(to right, #2f66a9, #398ad7);
   height: 50vh;
   color: #f7f7f7;
   display: flex;
@@ -49,9 +84,20 @@ a:active {
   justify-content: center;
   align-items: center; }
   .header__box--title {
-    font-size: 3rem; }
+    font-size: 3rem;
+    margin-top: auto; }
   .header__box--text {
-    font-size: 1.6rem; }
+    text-align: center;
+    font-size: 1.6rem;
+    margin-bottom: auto; }
+  .header__box--buttons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem; }
+    .header__box--buttons > a {
+      margin-left: 2rem;
+      margin-right: 2rem; }
 
 .content {
   padding-top: 2rem; }
@@ -62,7 +108,8 @@ a:active {
   .content__section--divider {
     display: block;
     width: 100%;
-    border-top: 0.2rem solid #398ad7; }
+    height: .2rem;
+    background-image: linear-gradient(to bottom right, #2f66a9, #398ad7); }
   .content__section--text {
     padding-top: 1rem; }
   .content__section--image {
@@ -73,3 +120,18 @@ a:active {
     max-width: 80%;
     width: auto;
     height: auto; }
+  .content__section--video {
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+    display: block;
+    margin: 0 auto;
+    max-width: 75%;
+    width: auto;
+    height: auto;
+    object-fit: cover; }
+
+.footer {
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
+  color: #398ad7;
+  text-align: center; }
