--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,34 +91,41 @@ a:active {
 
 .content {
   padding-top: 2rem; }
-  .content__section:not(:last-child) {
-    padding-bottom: 1.5rem; }
-  .content__section--heading {
-    font-size: 2.2rem; }
-  .content__section--divider {
-    display: block;
-    width: 100%;
-    height: .2rem;
-    background-image: linear-gradient(to bottom right, #2f66a9, #398ad7); }
-  .content__section--text {
-    padding-top: 1rem; }
-  .content__section--image {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    display: block;
-    margin: 0 auto;
-    max-width: 80%;
-    width: auto;
-    height: auto; }
-  .content__section--video {
-    padding-top: 1.5rem;
-    padding-bottom: 1rem;
-    display: block;
-    margin: 0 auto;
-    max-width: 75%;
-    width: auto;
-    height: auto;
-    object-fit: cover; }
+  .content__section {
+    transition: all .2s;
+    padding: 0.25rem 2.5rem 1.5rem 2.5rem; }
+    .content__section:not(:last-child) {
+      margin-bottom: 3rem; }
+    .content__section--heading {
+      text-align: center;
+      font-size: 2.2rem; }
+    .content__section--divider {
+      display: block;
+      width: 100%;
+      height: .2rem;
+      background-image: linear-gradient(to bottom right, #2f66a9, #398ad7); }
+    .content__section--text {
+      margin-top: 1rem; }
+    .content__section--image {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      display: block;
+      margin: 0 auto;
+      max-width: 80%;
+      width: auto;
+      height: auto; }
+    .content__section--video {
+      padding-top: 1.5rem;
+      padding-bottom: 1rem;
+      display: block;
+      margin: 0 auto;
+      max-width: 75%;
+      width: auto;
+      height: auto;
+      object-fit: cover; }
+    .content__section:hover {
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+      transform: scale(1.02); }
 
 .footer {
   margin-top: 3rem;
