--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -2,22 +2,28 @@
     padding-top: 2rem;
 
     &__section{
+
+        transition: all .2s;
+        padding: 0.25rem 2.5rem 1.5rem 2.5rem;
+
         &:not(:last-child){
-            padding-bottom: 1.5rem;
+            margin-bottom: 3rem;
         }
+
         &--heading {
+            text-align: center;
             font-size: $heading-font-size;
         }
+
         &--divider {
             display: block;
             width: 100%;
             height: .2rem;
-            //border-top: 0.2rem solid $color-primary;
             background-image: linear-gradient(to bottom right, $color-secondary, $color-primary);
         }
 
         &--text {
-            padding-top: 1rem;
+            margin-top: 1rem;
         }
 
         &--image{
@@ -39,6 +45,11 @@
             width: auto;
             height: auto;
             object-fit: cover;
+        }
+
+        &:hover {
+            box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+            transform: scale(1.02);
         }
     }
 }
