style.css is prefixed and compressed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,134 +1,1 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-  @media (max-width: 75em) {
-    html {
-      font-size: 56.25%; } }
-  @media (max-width: 56.25em) {
-    html {
-      font-size: 50%; } }
-  @media (min-width: 112.5em) {
-    html {
-      font-size: 75%; } }
-
-body {
-  box-sizing: border-box;
-  padding: 4rem 4rem 0 4rem;
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1.7;
-  color: #777; }
-  @media (max-width: 56.25em) {
-    body {
-      padding: 3rem 3rem 0 3rem; } }
-  @media (max-width: 37.5em) {
-    body {
-      padding: 2rem 2rem 0 2rem; } }
-
-*::selection {
-  background: #999;
-  color: #f7f7f7; }
-
-a,
-a:link,
-a:visited,
-a:active {
-  color: #398ad7;
-  text-decoration: none; }
-
-.btn, .btn:link, .btn:visited {
-  width: 17rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
-  padding: 0.75rem 4rem;
-  border-radius: .2rem;
-  display: inline-block;
-  transition: all .2s;
-  position: relative;
-  font-size: 1.6rem;
-  border: none;
-  cursor: pointer; }
-
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-
-.btn--white {
-  background-color: #f7f7f7;
-  color: #777; }
-
-.header__box {
-  background-image: linear-gradient(to right, #2f66a9, #398ad7);
-  height: 50vh;
-  color: #f7f7f7;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
-  .header__box--title {
-    font-size: 3rem;
-    margin-top: auto; }
-  .header__box--text {
-    text-align: center;
-    font-size: 1.6rem;
-    margin-bottom: auto; }
-  .header__box--buttons {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 2rem; }
-    .header__box--buttons > a {
-      margin-left: 2rem;
-      margin-right: 2rem; }
-
-.content {
-  padding-top: 2rem; }
-  .content__section {
-    transition: all .2s;
-    padding: 0.25rem 2.5rem 1.5rem 2.5rem; }
-    .content__section:not(:last-child) {
-      margin-bottom: 3rem; }
-    .content__section--heading {
-      text-align: center;
-      font-size: 2.2rem; }
-    .content__section--divider {
-      display: block;
-      width: 100%;
-      height: .2rem;
-      background-image: linear-gradient(to bottom right, #2f66a9, #398ad7); }
-    .content__section--text {
-      margin-top: 1rem; }
-    .content__section--image {
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      display: block;
-      margin: 0 auto;
-      max-width: 80%;
-      width: auto;
-      height: auto; }
-    .content__section--video {
-      padding-top: 1.5rem;
-      padding-bottom: 1rem;
-      display: block;
-      margin: 0 auto;
-      max-width: 75%;
-      width: auto;
-      height: auto;
-      object-fit: cover; }
-    .content__section:hover {
-      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
-      transform: scale(1.02); }
-
-.footer {
-  margin-top: 3rem;
-  margin-bottom: 1.5rem;
-  color: #398ad7;
-  text-align: center; }
+*,*::after,*::before{margin:0;padding:0;box-sizing:inherit}html{font-size:62.5%}@media (max-width: 75em){html{font-size:56.25%}}@media (max-width: 56.25em){html{font-size:50%}}@media (min-width: 112.5em){html{font-size:75%}}body{box-sizing:border-box;padding:4rem 4rem 0 4rem;font-family:"Lato", sans-serif;font-weight:400;font-size:1.6rem;line-height:1.7;color:#777}@media (max-width: 56.25em){body{padding:3rem 3rem 0 3rem}}@media (max-width: 37.5em){body{padding:2rem 2rem 0 2rem}}*::-moz-selection{background:#999;color:#f7f7f7}*::selection{background:#999;color:#f7f7f7}a,a:link,a:visited,a:active{color:#398ad7;text-decoration:none}.btn,.btn:link,.btn:visited{width:17rem;text-transform:uppercase;text-decoration:none;text-align:center;padding:0.75rem 4rem;border-radius:.2rem;display:inline-block;transition:all .2s;position:relative;font-size:1.6rem;border:none;cursor:pointer}.btn:hover{transform:translateY(-3px);box-shadow:0 1rem 2rem rgba(0,0,0,0.2)}.btn--white{background-color:#f7f7f7;color:#777}.header__box{background-image:linear-gradient(to right, #2f66a9, #398ad7);height:50vh;color:#f7f7f7;display:flex;flex-direction:column;justify-content:center;align-items:center}.header__box--title{font-size:3rem;margin-top:auto}.header__box--text{text-align:center;font-size:1.6rem;margin-bottom:auto}.header__box--buttons{width:100%;display:flex;justify-content:center;margin-bottom:2rem}.header__box--buttons>a{margin-left:2rem;margin-right:2rem}.content{padding-top:2rem}.content__section{transition:all .2s;padding:0.25rem 2.5rem 1.5rem 2.5rem}.content__section:not(:last-child){margin-bottom:3rem}.content__section--heading{text-align:center;font-size:2.2rem}.content__section--divider{display:block;width:100%;height:.2rem;background-image:linear-gradient(to bottom right, #2f66a9, #398ad7)}.content__section--text{margin-top:1rem}.content__section--image{padding-top:1rem;padding-bottom:1rem;display:block;margin:0 auto;max-width:80%;width:auto;height:auto}.content__section--video{margin:1.5rem auto 1rem auto;display:block;max-width:90%;width:64rem;height:36rem}.content__section:hover{box-shadow:0 1.5rem 4rem rgba(0,0,0,0.2);transform:scale(1.02)}.footer{margin-top:3rem;margin-bottom:1.5rem;color:#398ad7;text-align:center}
